--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,6 +7,8 @@ on:
   repository_dispatch:
     types:
       - webhook
+    inputs:
+      name:
 
 jobs:
   greet:
@@ -14,4 +16,4 @@ jobs:
 
     steps:
     - name: Send greeting
-      run: echo "${{ github.event.inputs.message }}"
+      run: 'echo "payload: ${{ github.event.client_payload }}"'
