--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,11 @@
 name: Build
 
 on:
+  push:
+      branches: [ "main" ]
+  pull_request:
+      branches: [ "main" ]
+      
   workflow_dispatch:
 
   # Allows external webhook trigger
@@ -20,6 +25,6 @@ jobs:
           ref: test
       
       - run: cat README.md
-      
+
       - name: Send greeting
         run: 'echo "payload:  ${{ github.event.client_payload.test }}"'
