--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,6 +26,6 @@ jobs:
       
       - run: cat README.md
       - run: echo ${{ github.event.head_commit.message }}
-      
+      - run: echo "${{toJSON(github.event)}}"
       - name: Send greeting
         run: 'echo "payload:  ${{ github.event.client_payload.test }}"'
