--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: 
+          fetch-depth: 5
       
       - run: cat README.md
       - run: echo ${{ github.event.head_commit.message }}
