--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,10 +23,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: 
-          fetch-depth: 5
+          fetch-depth: 0
       
       - run: cat README.md
       - run: echo ${{ github.event.head_commit.message }}
-      - run: echo "${{toJSON(github.event.commits)}}"
+      - name: get file changes
+        run: | 
+          git diff --name-only ${{ github.event.before }} ${{ github.event.after }}
       - name: Send greeting
         run: 'echo "payload:  ${{ github.event.client_payload.test }}"'
