--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           ref: 
           fetch-depth: 0
-      - run: echo git log
+      - run: git log -10 --pretty=format:'%h - %an - %s' 
       - run: cat README.md
       - run: echo ${{ github.event.head_commit.message }}
       - run: echo "${{toJSON(github.event.commits)}}"
